@@ -1,5 +1,6 @@
 0.02
  - Add get_lines() method to doc.
+ - Add get_stations() method to doc.
  - Remove executable bit from bucharest-map.xml file.
 
 0.01 2014-12-10T01:21:14+01:00
